# diary-project

./: .gitignore  .gitmessage.txt  README.md  pyproject.toml
app/: main.py
app/api/v1/: auth.py  deps.py  diary.py  questions.py  quotes.py
app/core/: config.py  deps.py  security.py
app/db/: pool.py
app/models/: blacklist_token.py  question.py  quote.py  user.py
app/schemas/: auth.py  user.py
app/services/: auth_service.py  quote_service.py
